# high-throughput-convolutions

./: .gitignore  Makefile  README.md
src/: CMakeLists.txt
src/app/: convolutions.xml
src/liteConv/: CMakeLists.txt  liteConv.cpp  liteConv.h  main.cpp
src/python/: gen3SequencesToYarp.py  ros2yarp.py
src/refConv/: CMakeLists.txt  main.cpp  refConv.cpp  refConv.h
